--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--===============> All Style Link <===================-->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
   <link rel="icon" href="unnamed.png" /> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>X-O Game</title>
